# briteboard

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
control-board/: platformio.ini
control-board/src/: main.ino
src/: logging.rs  main.rs  systick.rs
