[package]
name = "briteboard"
version = "0.1.0"
authors = ["Devin Brite <devin@dwbrite.com>"]
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "0.2.3"
log = "0.4.11"
teensy4-panic = "0.2.0"

# LEDs
ws2812-nop-imxrt1062 = "0.2.0"
smart-leds = "0.3.0"

# OLED
ssd1351 = "0.4.0"
embedded-graphics = "0.7.1"

[dependencies.teensy4-bsp]
version = "0.3"
features = ["rt"]

# Don't optimize build dependencies, like proc macros.
# Helps with build times.
[profile.release.build-override]
opt-level = 0
